# bitmap-reader-writer

./: CMakeLists.txt  README.md  bitmap.cpp  bitmap.h  main.cpp  window.cpp  window.h
